--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,13 @@ a{transition: .3s}
 .fix{
     overflow: hidden;
 }
+.row{
+    margin-left: -15px;
+    margin-right: -15px;
+}
+.col-4{width: 33.33%;float: left;padding: 0 15px}
+.col-8{width: 66.66%;float: left;padding: 0 15px}
+.col-12{width: 100%;float: left;padding: 0 15px}
 .header-area{
     border-top: 5px solid #4272d7 ;
     min-height: 120px;
@@ -67,6 +74,7 @@ ul{margin: 0;padding: 0;list-style: none}
     opacity: 0;
     visibility: hidden;
     transition: .4s;
+    z-index: 999;
 }
 .main-menu ul li:hover ul.submenu{
     opacity: 1;
@@ -176,4 +184,134 @@ ul{margin: 0;padding: 0;list-style: none}
 }
 .active-slide .owl-dots button.owl-dot.active{
     background: blue;
+}
+
+/*cta area start*/
+.cta-area {
+    padding: 30px 0;
+    background: #4272d7;
+}
+
+.cta-text{}
+.cta-text p{
+    font-size: 18px;
+    color: #fff;
+    font-weight: 700;
+    margin-top: 10px;
+}
+.cta-text p span{font-size: 30px}
+.cta-button{ text-align: right;}
+.cta-button a{
+    font-size: 18px;
+    font-weight: 700;
+    text-decoration: none;
+    border: 2px solid #fff;
+    padding: 17px 45px;
+    color: #fff;
+    display: inline-block;
+}
+
+/*features area start*/
+.features-area{
+    margin: 70px 0;
+}
+.single-features{
+    position: relative;
+}
+.single-features:hover .features-content{transform: translateY(0)}
+.features-img{
+}
+.features-content{
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: #4272d7;
+    bottom: 0;
+    padding: 30px;
+    transition: .5s;
+    transform: translateY(70%);
+    overflow: hidden;
+    margin-right: 11px;
+}
+.features-icon{
+    margin-bottom: 25px;
+}
+.features-icon i {
+    color: #fff;
+    font-size: 16px;
+    display: inline-block;
+}
+.features-icon h3 {
+    font-size: 16px;
+    color: #fff;
+    display: inline-block;
+    margin-left: 20px;
+}
+.features-content p{
+    color: #e5e5e5;
+    line-height: 20px;
+}
+.features-content a {
+    color: #fff;
+    margin-top: 15px;
+    display: inline-block;
+    text-decoration: none;
+}
+
+/*section area start*/
+.section-title{
+    text-align: center;
+    margin-bottom: 80px;
+}
+.section-title h2{
+    font-size: 20px;
+    font-weight: 800;
+    text-transform: uppercase;
+    position: relative;
+    display: inline-block;
+    padding-bottom: 10px;
+}
+.section-title h2:before{
+    position: absolute;
+    background: #222;
+    content: "";
+    left: 0;
+    bottom: 0;
+    height: 2px;
+    width: 50px;
+    right: 0;
+    margin: auto;
+}
+/*service area start*/
+.service-area{
+    background: #f0f0f0;
+    padding: 70px 0;
+    padding-bottom: 20px;
+}
+.service-icon{}
+.service-icon i{
+    height: 50px;
+    width: 50px;
+    font-size: 26px;
+    color: #fff;
+    background: #4272d7;
+    text-align: center;
+    line-height: 50px;
+}
+.service-content{
+    padding-left: 15px;
+}
+.service-content h3{
+    color: #555555;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+.service-content p{
+    font-size: 15px;
+    color: #666666;
+    line-height: 25px;
+}
+.single-service{
+    display: flex;
+    padding-bottom: 50px;
 }
